--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: astral-sh/ruff-action@v3
         with:
           version-file: requirements-dev.txt
-          args: check ./graphix_zx ./tests ./examples
+          args: check ./lspattern ./tests ./examples
 
       - run: ruff format --check --diff
