--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ version = "0.1.0"
 requires-python = ">=3.9, <3.14"
 dynamic = ["dependencies", "optional-dependencies"]
 
+[tool.setuptools.dynamic]
+dependencies = { file = ["requirements.txt"] }
+
+[tool.setuptools.dynamic.optional-dependencies]
+dev = { file = ["requirements-dev.txt"] }
+
 [tool.ruff]
 target-version = "py311"
 line-length = 120
