--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "lspattern"
 version = "0.1.0"
-requires-python = ">=3.9, <3.14"
+requires-python = ">=3.10, <3.14"
 dynamic = ["dependencies", "optional-dependencies"]
+
+[tool.ruff]
+# Align Ruff parser with Python 3.12 so modern syntax (match/case) parses.
+target-version = "py312"
