--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,8 @@
-absl-py>=2
-asttokens>=3
-attrs>=25
-colorama>=0.4
-comm>=0.2
-contourpy>=1
-cycler>=0.12
-debugpy>=1
-decorator>=5
-executing>=2
-fastjsonschema>=2
-fonttools>=4
-immutabledict>=4
-iniconfig>=2
-ipykernel>=6
-ipython>=9
-ipython_pygments_lexers>=1
-ipywidgets>=8
-jedi>=0.19
-jsonschema>=4
-jsonschema-specifications>=2025
-jupyter_client>=8
-jupyter_core>=5
-jupyterlab_widgets>=3
-kiwisolver>=1
-matplotlib
-matplotlib-inline>=0.1
-narwhals>=2
-nbformat>=5
-nest-asyncio>=1
-networkx>=3
-nodeenv>=1
 numpy>=1.22,<3
-ortools>=9,<10
-packaging>=25
-pandas>=2
-parso>=0.8
-pathspec>=0.12
-pillow>=11
-platformdirs>=4
-plotly>=6
-pluggy>=1
-prompt_toolkit>=3
-protobuf>=6
-psutil>=7
-pure_eval>=0.2
-Pygments>=2
-PyMatching>=2
-pyparsing>=3
-python-dateutil>=2.9
-pytz>=2025
-pywin32>=311
-pyzmq>=27
-referencing>=0.36
-rpds-py>=0.27
-scipy>=1
-sinter>=1
-six>=1
-stack-data>=0.6
+matplotlib
 stim
-tornado>=6
-traitlets>=5
+pymatching
+sinter
+ortools>=9,<10
 typing_extensions
-tzdata>=2025
-wcwidth>=0.2
-widgetsnbextension>=4
+plotly>=6
