--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,11 +54,15 @@ ignore = [
 
   # Manually disabled
   "CPY",     # copyright missing
+  "D100",    # missing docstring in public module
   "D105",    # undocumented magic method
+  "D205",    # blank line required between summary line and description
+  "DOC201",  # return is not documented in docstring
   "ERA",     # commented-out code
   "FBT",     # boolean-trap
   "FIX",     # fixme
   "PLR0904", # too-many-public-methods
+  "T201",    # print found
 ]
 
 [tool.ruff.lint.pylint]
