--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ ignore = [
   "FIX",     # fixme
   "PLR0904", # too-many-public-methods
 ]
+exclude = [
+  "lspattern/visualizers/*",
+]
 
 [tool.ruff.lint.pylint]
 allow-dunder-method-names = [
@@ -88,10 +91,7 @@ docstring-code-format = true
   "D",
 ]
 
-[[tool.ruff.lint.overrides]]
-# Restrict checks in visualizers to fatal errors only
-files = ["lspattern/visualizers/**/*.py"]
-select = ["E9", "F63", "F7", "F82"]
+
 
 [tool.pytest.ini_options]
 pythonpath = ["lspattern"]
