update. Bug in seam

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/tqec/tqec.git
 [submodule "src/graphix-zx"]
 	path = src/graphix-zx
-	url = https://github.com/TeamGraphix/graphix-zx
+	url = https://github.com/TeamGraphix/graphix-zx.git
