--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,26 @@ extend-exclude = [
   "lspattern/ops.py",
   "lspattern/rhg.py",
   "lspattern/rhg2.py",
+  # T48: exclude non-library content from lint scope
+  "examples/**",
+  "tests/**",
+  "src/**",
 ]
 
 [tool.ruff.lint]
 preview = true
-select = ["ALL"]
+# T48: pragmatic baseline instead of ALL
+select = [
+  "E", "F", "W",  # pycodestyle/pyflakes
+  "I",              # isort
+  "S",              # security
+  "B",              # bugbear
+  "PERF",           # performance
+  "UP",             # pyupgrade
+  "SIM",            # simplification
+  "PL",             # pylint (selected)
+  "RUF",            # ruff-specific
+]
 ignore = [
   # Conflicts with ruff format
   "COM812",
@@ -69,6 +84,14 @@ ignore = [
   "FBT",     # boolean-trap
   "FIX",     # fixme
   "PLR0904", # too-many-public-methods
+  # T48: relax non-critical rules for now
+  "RUF001", "RUF002", "RUF003",   # ambiguous unicode in JP docs
+  "D",                              # docstring style not enforced now
+  "ANN",                            # presence enforced via mypy
+  "C901",                           # complex function
+  "PLR09",                          # too-many-*
+  "TC001",                          # typing-only imports
+  "E402",                           # import at top
 ]
 
 [tool.ruff.lint.pylint]
