--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,8 +4,8 @@
 name: pytest
 
 on:
-  pull_request:
-  workflow_dispatch:
+  # pull_request:
+  # workflow_dispatch:
 
 permissions:
   contents: read
