--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,3 +116,6 @@ files = ["lspattern"]
 [tool.pyright]
 include = ["lspattern"]
 reportMissingImports = false
+# Note: For stricter type checking with editable installs, users may create
+# a local .pyrightconfig.json file with:
+# {"extraPaths": ["../graphix-zx"], "reportMissingImports": true}
