Enforce Type Checks on the Unit Tests (#83)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,8 +140,8 @@ markers = "slow: mark test as slow"
 [tool.mypy]
 strict = true
 ignore_missing_imports = true
-files = ["lspattern"]
+files = ["lspattern", "tests"]
 
 [tool.pyright]
-include = ["lspattern"]
+include = ["lspattern", "tests"]
 reportMissingImports = false
