--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ convention = "numpy"
 docstring-code-format = true
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*.py" = [
+"tests/**/*.py" = [
   "S101",    # `assert` detected
   "SLF001",  # private method
   "PLC2701", # private method
@@ -122,7 +122,7 @@ docstring-code-format = true
   "D103",
   "D104",
   "D400",
-  "PLR6301"
+  "PLR6301",
 ]
 "examples/*.py" = [
   "T201", # print
