--- a/lspattern/new_blocks/patch_layout/layers/memory.yml
+++ b/lspattern/new_blocks/patch_layout/layers/memory.yml
@@ -1,13 +1,14 @@
-name: MemoryUnit_RotatedSurfaceCode
-description: This patch layout specifies a Rotated Surface Code memory layout
+name: MemoryUnit
+description: This patch layout specifies a memory unit layer
 
 params:
   layout: rotated_surface_code # required
-  code_distance: 5 # This can be optional by specifying block level
-  boundary: # This can be optional by specifying block level
+  boundary: # If specified, this overrides block level boundary
     left: X
     right: X
     top: Z
     bottom: Z
 
   logical_observables: null # optional
+
+  measure_map: null # custom measurement design map, optional
