--- a/lspattern/new_blocks/patch_layout/layers/measure.yml
+++ b/lspattern/new_blocks/patch_layout/layers/measure.yml
@@ -12,3 +12,4 @@ params:
   logical_observables: TB # top to bottom logical observable for X measurement
 
   measure_map: null # custom measurement design map, optional
+  no_ancilla: true # if true, no ancilla qubits are generated for this layer
