--- a/lspattern/new_blocks/patch_layout/layers/memory.yml
+++ b/lspattern/new_blocks/patch_layout/layers/memory.yml
@@ -12,3 +12,4 @@ params:
   logical_observables: null # optional
 
   measure_map: null # custom measurement design map, optional
+  ancilla: true # if true, ancilla qubits are generated for this layer
