--- a/lspattern/new_blocks/patch_layout/layers/memory.yml
+++ b/lspattern/new_blocks/patch_layout/layers/memory.yml
@@ -1,15 +1,22 @@
 name: MemoryUnit
 description: This patch layout specifies a memory unit layer
 
-params:
-  layout: rotated_surface_code # required
+params: # everything will be defaulted, no need to specify anything
+  layout: rotated_surface_code
   boundary: # If specified, this overrides block level boundary
     left: X
     right: X
     top: Z
     bottom: Z
 
-  logical_observables: null # optional
+  logical_observables: null # can be omitted, defaults to null
 
-  measure_map: null # custom measurement design map, optional
-  ancilla: true # if true, ancilla qubits are generated for this layer
+  layers:  # layer configurations
+    - layer1:
+      basis: X # layer 1, transversally X basis, can be omitted, defaults to X
+      ancilla: true # can be omitted, defaults to true
+      init: false # can be omitted, defaults to false
+    - layer2:
+      basis: X # layer 2, transversally X basis, can be omitted, defaults to X
+      ancilla: true
+      init: false # can be omitted, defaults to false
