--- a/lspattern/new_blocks/patch_layout/layers/measure.yml
+++ b/lspattern/new_blocks/patch_layout/layers/measure.yml
@@ -2,7 +2,7 @@ name: MeasureXUnit
 description: This patch layout specifies a X measurement unit layer
 
 params:
-  layout: rotated_surface_code # required
+  layout: rotated_surface_code
   boundary: # This can be optional by specifying block level
     left: X
     right: X
