--- a/lspattern/new_blocks/patch_layout/blocks/memory.yml
+++ b/lspattern/new_blocks/patch_layout/blocks/memory.yml
@@ -2,7 +2,7 @@ name: MemoryBlock
 description: This block represents a memory block
 
 params:
-  layout: rotated_surface_code # required
+  layout: rotated_surface_code # optional
   code_distance: 3 # This can be overridden by layer config
   boundary: # This can be overridden by layer config
     left: X
