--- a/lspattern/new_blocks/patch_layout/layers/zz_measure.yml
+++ b/lspattern/new_blocks/patch_layout/layers/zz_measure.yml
@@ -1,12 +1,9 @@
 name: ZZMeasureUnit
 description: This patch layout specifies a ZZ measurement unit layer
 
-logical_observables: Z # Z ancila measurement will be collected
-
-layers:  # layer configurations
-  - layer1:
-    basis: X # layer 1, transversally X basis, can be omitted, defaults to X
-    ancilla: true # layer 1 needs ancilla qubits for ZZ measurement
-  - layer2:
-    basis: X # layer 2, transversally X basis, can be omitted, defaults to X
-    ancilla: true
+layer1:
+  basis: X # layer 1, transversally X basis, can be omitted, defaults to X
+  ancilla: true # layer 1 needs ancilla qubits for ZZ measurement
+layer2:
+  basis: X # layer 2, transversally X basis, can be omitted, defaults to X
+  ancilla: true
