revive init parameter

--- a/lspattern/new_blocks/patch_layout/layers/memory.yml
+++ b/lspattern/new_blocks/patch_layout/layers/memory.yml
@@ -4,6 +4,8 @@ description: This patch layout specifies a memory unit layer
 layer1:
   basis: X # layer 1, transversally X basis, can be omitted, defaults to X
   ancilla: true # can be omitted, defaults to true
+  init: false
 layer2:
   basis: X # layer 2, transversally X basis, can be omitted, defaults to X
   ancilla: true
+  init: false
