--- a/lspattern/new_blocks/patch_layout/layers/init_zero.yml
+++ b/lspattern/new_blocks/patch_layout/layers/init_zero.yml
@@ -4,6 +4,8 @@ description: This patch layout specifies an init zero unit layer
 layer1:
   basis: null # layer 1, no qubit preparation
   ancilla: false # no ancilla qubits prepared
+  init: false
 layer2:
   basis: X # layer 2, transversally X basis, can be omitted, defaults to X
   ancilla: true
+  init: true
