--- a/lspattern/new_blocks/examples/memory_canvas.yml
+++ b/lspattern/new_blocks/examples/memory_canvas.yml
@@ -12,6 +12,6 @@ cube:
   - position: [0, 0, 1]
     block: MeasureXBlock
     boundary: XXZZ
-    logical_observables: TB # top to bottom
+    logical_observables: TB # top to bottom, logical X observable
 
 pipe: []
