--- a/lspattern/new_blocks/patch_layout/layers/hadamard_unit.yml
+++ b/lspattern/new_blocks/patch_layout/layers/hadamard_unit.yml
@@ -2,7 +2,7 @@ name: HadamardUnit
 description: This patch layout specifies a Hadamard unit layer
 
 layer1:
-  basis: X # layer 1, transversally X basis, can be omitted, defaults to X
+  basis: Y # layer 1, transversal Y basis
   ancilla: true # can be omitted, defaults to true
 layer2:
   basis: Y # layer 2, transversal Y basis measurement
