fix boudnary of measure pipe

--- a/lspattern/new_blocks/examples/merge_split.yml
+++ b/lspattern/new_blocks/examples/merge_split.yml
@@ -41,7 +41,7 @@ pipe:
   - start: [0, 0, 2]
     end: [1, 0, 2]
     block: MeasureXBlock
-    boundary: ZZXX
+    boundary: ZZOO
     logical_observables: RL
 
 logical_observables:
