--- a/lspattern/new_blocks/examples/merge_split.yml
+++ b/lspattern/new_blocks/examples/merge_split.yml
@@ -42,7 +42,7 @@ pipe:
     end: [1, 0, 2]
     block: MeasureXBlock
     boundary: ZZOO
-    logical_observables: RL
+    logical_observables: TB
 
 logical_observables:
   - cube: [[0, 0, 3]] # cube
