--- a/examples/design/patch_expansion_x.yml
+++ b/examples/design/patch_expansion_x.yml
@@ -5,40 +5,35 @@ layout: rotated_surface_code # required
 
 cube:
   - position: [0, 0, 0]
-    block: InitPlusBlock
+    block: InitZeroBlock
     boundary: XXZZ
   - position: [0, 0, 1]
     block: MemoryBlock
-    boundary: XXZZ
+    boundary: XXZO
   - position: [1, 0, 1]
     block: InitZeroBlock
-    boundary: XXZZ
+    boundary: XXOZ
   - position: [0, 0, 2]
-    block: MemoryBlock
+    block: MeasureZBlock
     boundary: XXZO
+    logical_observables: RL
   - position: [1, 0, 2]
-    block: InitPlusBlock
+    block: MeasureZBlock
     boundary: XXOZ
-  - position: [0, 0, 3]
-    block: MeasureXBlock
-    boundary: XXZO
-    logical_observables: TB
-  - position: [1, 0, 3]
-    block: MeasureXBlock
-    boundary: XXOZ
-    logical_observables: TB
+    logical_observables: RL
 
 pipe:
-  - start: [0, 0, 2]
-    end: [1, 0, 2]
+  - start: [0, 0, 1]
+    end: [1, 0, 1]
     block: InitZeroBlock
     boundary: XXOO
     logical_observables: Z
-  - start: [0, 0, 3]
-    end: [1, 0, 3]
-    block: MeasureXBlock
+  - start: [0, 0, 2]
+    end: [1, 0, 2]
+    block: MeasureZBlock
     boundary: XXOO
-    logical_observables: TB
+    logical_observables: RL
 
 logical_observables:
-  - cube: [[0, 0, 3]]
+  - cube: [[0, 0, 2], [1, 0, 2]] # cube
+    pipe: [[[0, 0, 2], [1, 0, 2]]]
