Add 3D z-sweep MP4 export with sliding window

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ ortools>=9,<10
 typing_extensions>=4.0
 nbformat>=4.20
 plotly>=6
+kaleido
+imageio
+imageio-ffmpeg
 graphqomb>=0.1.1
 pydantic>=2.0.0
 pyyaml>=6
